2008-01-09  Mark Ellis  <mark@mpellis.org.uk>

	* added LICENSE to EXTRA_DIST

2007-11-29  Mark Ellis <mark_ellis@users.sourceforge.net>

	* from Debian package, man pages for minor utils, and 
	  install them (disable in configure)

2007-11-28  Mark Ellis <mark_ellis@users.sourceforge.net>

	* started Changelog
	* added synce and rapi flags to python Makefile.am
